--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^1.1.2
   image_picker: ^1.0.7
   shared_preferences: ^2.2.2
+  fluttertoast: ^8.2.4
+
 
 dev_dependencies:
   flutter_test:
